Added getSearchObjects endpoint
